--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,24 +1,24 @@
 version: 2
 
 updates:
-  - package-ecosystem: "pip"
-    directory: "/"
+  - package-ecosystem: pip
+    directory: /
     schedule:
-      interval: "daily"
-      time: "08:00"
+      interval: daily
+      time: 08:00
     labels:
-      - "dependencies"
+      - dependencies
     commit-message:
-      prefix: "chore"
-      include: "scope"
+      prefix: chore
+      include: scope
       
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "daily"
-      time: "08:00"
+      interval: daily
+      time: 08:00
     labels:
-      - "dependencies"
+      - dependencies
     commit-message:
-      prefix: "chore"
-      include: "scope"
+      prefix: chore
+      include: scope
