--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     directory: /
     schedule:
       interval: daily
-      time: 08:00
+      time: "08:00"
     labels:
       - dependencies
     commit-message:
@@ -16,7 +16,7 @@ updates:
     directory: /
     schedule:
       interval: daily
-      time: 08:00
+      time: "08:00"
     labels:
       - dependencies
     commit-message:
