perf: 添加检查CM相关的代码

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,6 +1,12 @@
 version: 3
 
 tasks:
+  update_dependencies:
+    aliases:
+      - update_deps
+    desc: 更新依赖
+    cmd: uv sync -U
+
   build:
     aliases:
       - b
