--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
 name = "paradox-game-mod-manager"
-version = "1.1.0"
+version = "1.2.0"
 description = "P社游戏模组管理器"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiofiles>=24.1.0",
-    "beautifulsoup4>=4.12.3",
     "nest-asyncio>=1.6.0",
     "prompt-toolkit>=3.0.48",
     "rich>=13.9.4",
@@ -16,14 +15,13 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pyinstaller>=6.11.1",
-    "pytest>=8.3.3",
-    "ruff>=0.8.0",
-    "tomli>=2.1.0",
+    "pytest>=8.3.4",
+    "ruff>=0.8.3",
+    "tomli>=2.2.1",
 ]
 
 [tool.uv.sources]
 steam = { git = "https://github.com/Arama0517/steam.git" }
-#asyncio-gevent = { git = "https://github.com/Arama0517/asyncio-gevent.git" }
 
 [tool.ruff]
 preview = true
@@ -48,3 +46,4 @@ name = "{project.name}"
 clean = true
 onefile = true
 noconfirm = true
+hidden-import = ["steam.protobufs"]
