--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dev = [
 ]
 
 [tool.uv.sources]
-steam = { git = "https://github.com/Arama0517/steam.git" }
+steam = { git = "https://github.com/Arama0517/steam_asyncio.git", rev = "v1.6.2" }
 
 [tool.ruff]
 preview = true
